--- a/views/index.pug
+++ b/views/index.pug
@@ -209,28 +209,18 @@
         <h4 class="text-uppercase mb-4">Around the Web</h4>
         <ul class="list-inline mb-0">
           <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/penguindan">
+            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/penguindan" target="_blank">
               <i class="fab fa-fw fa-facebook-f"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-google-plus-g"></i>
+            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.github.com/penguindan" target="_blank">
+              <i class="fab fa-fw fa-github"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/se-un-kim-a14544129/">
+            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/se-un-kim-a14544129/" target="_blank">
               <i class="fab fa-fw fa-linkedin-in"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-              <i class="fab fa-fw fa-dribbble"></i>
             </a>
           </li>
         </ul>
