--- a/views/index.pug
+++ b/views/index.pug
@@ -58,7 +58,8 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
         <h1 class="text-uppercase mb-0">Daniel Kim</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Machine Learning - Software Engineering - Security</h2>
+        <h2 class="font-weight-light mb-0">Machine Learning - Software Engineering - Security<br></h2>
+        <h3 class="mb-0">DanielKimStudent@Hotmail.com</h3>
       </div>
     </header>
 
@@ -72,7 +73,7 @@
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
+                  <i class="fas personal-tag fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
@@ -82,7 +83,7 @@
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
+                  <i class="fas academic-tag fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/cake.png" alt="">
@@ -92,42 +93,12 @@
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
+                  <i class="fas research-tag fa-3x"></i>
                 </div>
               </div>
               <img class="img-fluid" src="img/portfolio/circus.png" alt="">
             </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
+          </div
         </div>
       </div>
     </section>
@@ -139,10 +110,10 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead text-black">I am a deeply self-motivated Computer Science student from California State University, Long Beach. As a brief overview of my educational career, I have worked as a Graduate Assisstant as an undergraduate, currently lead a Machine Learning and Cybersecurity research lab supervised through Dr.Mozumdar, and currently am a member of the MIIPS (Machine Inteligence and Information Processing System) lab.</p>
+            <p class="lead text-black">I am a deeply self-motivated Computer Science student from California State University, Long Beach. As a brief overview of my educational career, I have worked as a Graduate Assisstant as an undergraduate, am currently leading a Machine Learning and Cybersecurity research lab supervised by Dr.Mozumdar, and am currently a member of the MIIPS (Machine Inteligence and Information Processing System) lab as supervised by Dr.Zhang.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead text-black">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead text-black">My interests lie within the fields of Machine Learning and Cybersecurity and look forward to increasing my technical knowledge as my opportunities arise. Thank you for looking at my website and if you have a moment, please make sure to look at the projects and experiences that I have supplied through the above pages and you may contact me through the method below or as provided in the Main Hero.</p>
           </div>
         </div>
         <div class="text-center mt-4">
