--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -22,6 +22,22 @@ h6 {
   color: rgb(0,0,0) !important;
 }
 
+.research-tag:before{
+  content: "Research";
+  font-size: xx-large;
+}
+
+.personal-tag:before{
+  content: "Personal";
+  font-size: xx-large;
+}
+
+.academic-tag:before{
+  content: "Academic";
+  font-size: xx-large;
+}
+
+
 hr.star-light,
 hr.star-dark {
   max-width: 15rem;
@@ -220,7 +236,7 @@ header.masthead h2 {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   opacity: 0;
-  background-color: rgba(24, 188, 156, 0.9);
+  background-color: rgba(160, 217, 251, 0.9);
 }
 
 .portfolio .portfolio-item .portfolio-item-caption:hover {
