--- a/views/index.pug
+++ b/views/index.pug
@@ -76,7 +76,7 @@
                   <i class="fas personal-tag fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/portfolio/personal-project.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -86,7 +86,7 @@
                   <i class="fas academic-tag fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="img/portfolio/academic-project.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -96,7 +96,7 @@
                   <i class="fas research-tag fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/portfolio/research-project.png" alt="">
             </a>
           </div
         </div>
@@ -110,7 +110,7 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead text-black">I am a deeply self-motivated Computer Science student from California State University, Long Beach. As a brief overview of my educational career, I have worked as a Graduate Assisstant as an undergraduate, am currently leading a Machine Learning and Cybersecurity research lab supervised by Dr.Mozumdar, and am currently a member of the MIIPS (Machine Inteligence and Information Processing System) lab as supervised by Dr.Zhang.</p>
+            <p class="lead text-black">I am a deeply self-motivated Computer Science student from California State University, Long Beach. As a brief overview of my educational career, I have worked as a Graduate Assisstant as an undergraduate, am currently leading a Machine Learning and Cybersecurity research lab supervised by Dr.Mohammad Mozumdar, and am currently a member of the MIIPS (Machine Inteligence and Information Processing System) lab as supervised by Dr.Wenlu Zhang.</p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="lead text-black">My interests lie within the fields of Machine Learning and Cybersecurity and look forward to increasing my technical knowledge as my opportunities arise. Thank you for looking at my website and if you have a moment, please make sure to look at the projects and experiences that I have supplied through the above pages and you may contact me through the method below or as provided in the Main Hero.</p>
@@ -222,10 +222,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Personal Projects</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="portfolio-img-fluid mb-5" src="img/portfolio/personal-project.png" alt="">
+              <p class="mb-5"> have a strong passion for coding and I often find myself interested in some projects and dive into them in my quest to gain understanding in a new field, but to also keep up with the constantly evolving world of technology. Thank you for checking these out!</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -244,10 +244,10 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Academic Projects</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="portfolio-img-fluid mb-5" src="img/portfolio/academic-project.png" alt="">
+              <p class="mb-5">These projects showcase my skillset and knowledge in a variety of fields and applications from security, application development, and database management. I have experience in a variety of languages, but the ones I am most comfortable with are Python, Java, C#, and Javascript.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close Project</a>
@@ -266,79 +266,19 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Research Projects</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <img class="portfolio-img-fluid mb-5" src="img/portfolio/research-project.png" alt="">
+              <p class="mb-5">I have worked as the lead research assisstant for Dr.Mohammad Mozumdar at California State University, Long Beach in the focus on Machine Learning Applications for Anomaly Detection on Satellite Systems. I am also a member of the CSULB Machine Intelligence and Information Processing Systems lab where we focus on research in the fields of Deep Learning and Pattern Recognition supervised by Dr.Wenlu Zhang. Below are my works and contributions to each.</p>
+              <p>References:</p>
+              <p>Dr.Mohammad Mozumdar: mohammad.mozumdar@csulb.edu</p>
+              <p>Dr.Wenlu Zhang: wenlu.zhang@csulb.edu</p>
+              <p class="mb-5">MIIPS Website: <a href="https://csulb-ml.github.io" target="_blank">https://csulb-ml.github.io/</a></p>
+              <h4 class="text-secondary text-upperscase mb-0">MIL-STD-1553 Intrusion Detection</h4>
+              <a href="/research-papers/intrusion-detection.pdf" download>Download Research Paper</a>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/game.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
-      <div class="portfolio-modal-dialog bg-white">
-        <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
-          <i class="fa fa-3x fa-times"></i>
-        </a>
-        <div class="container text-center">
-          <div class="row">
-            <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
-              <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/submarine.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
-              <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
+                <i class="fa fa-close">Close</i>
+              </a>
             </div>
           </div>
         </div>
