--- a/views/index.pug
+++ b/views/index.pug
@@ -274,8 +274,16 @@
               <p>Dr.Mohammad Mozumdar: mohammad.mozumdar@csulb.edu</p>
               <p>Dr.Wenlu Zhang: wenlu.zhang@csulb.edu</p>
               <p class="mb-5">MIIPS Website: <a href="https://csulb-ml.github.io" target="_blank">https://csulb-ml.github.io/</a></p>
-              <h4 class="text-secondary text-upperscase mb-0">MIL-STD-1553 Intrusion Detection</h4>
-              <a href="/research-papers/intrusion-detection.pdf" download>Download Research Paper</a>
+              <h4 class="text-secondary mb-0">MIL-STD-1553 Intrusion Detection</h4>
+              <p class="mb-0">Abstract</p>
+              <p class="mb-0">The goal for this project was to introduce an efficient method for detecting anomalies within the streaming data logs of an MIL-STD-1553 multiplex data bus system. Our current approach focuses on the incoming command words and the patterns in which they create to define a model creation pipeline comprising of training, testing, and exporting phases. Once exported, the project can be used to remotely or locally read data for real time data analysis and anomaly detection.</p>
+              <a href="https://www.github.com/penguindan/mil" target="_blank">Github<br></a>
+              <p class="mb-5"><a href="/research-paper/mil-std-1553.pdf" download>Download Research Paper</a></p>
+              <h4 class="text-secondary mb-0">Object Detection and Classification of Ships in Satellite Images</h4>
+              <p class="mb-0">Abstract</p>
+              <p class="mb-0">The goal for this project was to correctly detect and classify ships in large satellite images using a Convolutional Neural Network (CNN) that was trained on 80 by 80 images of ship and non-ship data in conjunction with a custom object detection algorithm.  Our approach is able to efficiently and accurately detect ships in satellite images of varying size ratios. In comparison to an approach found on Kaggle.com that uses a sliding window across the entire image to detect the ships within 15 minutes, our project pipeline is able to detect and output bounding boxes in under 5 seconds.</p>
+              <a href="https://www.github.com/penguindan/DeepLearningShipDetection" target="_blank">Github<br></a>
+              <p class="mb-5"><a href="/research-paper/object-detection.pdf" download>Download Research Paper</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close">Close</i>
               </a>
