--- a/views/index.pug
+++ b/views/index.pug
@@ -225,10 +225,14 @@
               <h2 class="text-secondary text-uppercase mb-0">Personal Projects</h2>
               <hr class="star-dark mb-5">
               <img class="portfolio-img-fluid mb-5" src="img/portfolio/personal-project.png" alt="">
-              <p class="mb-5"> have a strong passion for coding and I often find myself interested in some projects and dive into them in my quest to gain understanding in a new field, but to also keep up with the constantly evolving world of technology. Thank you for checking these out!</p>
+              <p class="mb-5">I have a strong passion for coding and I often find myself interested in some projects and dive into them in my quest to gain understanding in a new field, but to also keep up with the constantly evolving world of technology. Thank you for checking these out!</p>
+              <h4 class="text-secondary mb-0">Portfolio Website</h4>
+              <p class="mb-0"><strong>Tools</strong>: Bootstrap, Node.js, Digital Ocean, Github, Certbot</p>
+              <p class="mb-0"><strong>Concepts</strong>: Web Design, Backend Development, SSL, Security, Ajax, Jquery</p>
+              <p class="mb-0"<strong>Languages</strong>: HTML, Javascript, CSS, PHP</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
-                <i class="fa fa-close"></i>
-                Close Project</a>
+                <i class="fa fa-close">Close</i>
+              </a>
             </div>
           </div>
         </div>
@@ -249,6 +253,7 @@
               <img class="portfolio-img-fluid mb-5" src="img/portfolio/academic-project.png" alt="">
               <p class="mb-5">These projects showcase my skillset and knowledge in a variety of fields and applications from security, application development, and database management. I have experience in a variety of languages, but the ones I am most comfortable with are Python, Java, C#, and Javascript.</p>
               <h4 class="text-secondary mb-0">Senior Project: Red Pony-Astral Framework and Phylo</h4>
+              <p class="mb-0"><img src="img/astral.png" style="max-width:30%;"/><img src="img/phylo.png"></p>
               <p class="mb-0"><strong>Tools</strong>: Node.js, Mongo, Android Studio, AWS, Linux, Github, Trello, Slack</p>
               <p class="mb-0"><strong>Concepts</strong>: Backend Development, REST, API Design, Security, NoSQL, Application Development, AWS Environment, Version Control, Project Management, UI Design, Web Design</p>
               <p class="mb-0"><strong>Languages</strong>: Javascript, Java, Python, Bash, HTML, NoSQL, XML, CSS, Gradle</p>
@@ -264,6 +269,27 @@
               <p class="mb-0"><a href="https://github.com/DanDan-AdamFlores/Ransomware/tree/master/Encryption" target="_blank">Ransomeware: Encryption Github</a></p>
               <p class="mb-5"><a href="https://github.com/DanDan-AdamFlores/Ransomware/tree/master/Node_Server" target="_blank">Ransomware: Node.js Server Github</a></p>
               <h4 class="text-secondary mb-0">Android Application: Memories</h4>
+              <p class="mb-0"><img src="img/memories.png" style="max-width:20%;"/></p>
+              <p class="mb-0"><strong>Tools</strong>: Android Studio, Maven, Github, Firebase, Firestore, Google API</p>
+              <p class="mb-0"><strong>Concepts</strong>: Database Management, Application Development, Data Streaming, UI-Design</p>
+              <p class="mb-0"><strong>Languages</strong>: Java, XML, NoSQL</p>
+              <p class="mb-0"><strong>Goal</strong>: Memories is a Location based social media application where the focus is not on the user's but the events or "Memories" that the user and the people around them are experiencing.</p>
+              <p class="mb-5"><a href="https://www.github.com/penguindan/MemoriesApp">Github</a></p>
+              <h4 class="text-secondary mb-0">Autoshop Database Design Project</h4>
+              <p class="mb-0"><strong>Tools</strong>: MySQL</p>
+              <p class="mb-0"><strong>Concepts</strong>: Database Design</p>
+              <p class="mb-0"><strong>Languages</strong>: Java, SQL</p>
+              <p class="mb-0"><strong>Goal</strong>: Design a proof of concept database for an auto-shop. The project utilizes over 30 tables, more than 50 business rules, and approximately 1000 insert statements, views, triggers, and complex query statements and their corresponding outputs.</p>
+              <p class="mb-5"><a href="https://www.github.com/PenguinDan/AutoshopDatabaseProject" target="_blank">Github</a></p>
+              <h4 class="text-secondary mb-0">Honors (Insane) Algorithms Projects</h4>
+              <p class="mb-0"><strong>Tools</strong>: Java</p>
+              <p class="mb-0"><strong>Concepts</strong>: Dynamic Programming, Network Flow, Linear Programming, FFT, Recursion, Graphs, Simplex</p>
+              <p class="mb-0"><strong>Languages</strong>: Java, C++</p>
+              <p class="mb-0"><strong>Goal</strong>: All these algorithms projects were handpicked and strongly modified by my professor to increase their difficulty. The class was made up of only 7 students throughout the semester, and only 1 of them (me) was able to solve all of the algorithm problems. Below I display the hardest problems that I have solved throughout the semester.</p>
+              <p class="mb-0"><a href="https://www.github.com/PenguinDan/SoloAlgorithmsProject1" target="_blank">Russian Doll Reassembly - Dynamic Programming and Recursion</a></p>
+              <p class="mb-0"><a href="https://www.github.com/PenguinDan/SoloAlgorithmsProject2" target="_blank">Mining Problem - Graphs and Network Flow</a></p>
+              <p class="mb-0"><a href="https://www.github.com/PenguinDan/SoloAlgorithmsProject3" target="_blank">Hotlines - Graphs and Network Flow</a></p>
+              <p class="mb-5"><a href="https://www.github.com/PenguinDan/SoloAlgorithmsProject4" target="_blank">Hotels - Simplex/Linear Programming</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close">Close</i>
               </a>
