--- a/views/index.pug
+++ b/views/index.pug
@@ -24,6 +24,8 @@
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
 
+    <link rel="icon" type="image/png" href="./img/favicon.png">
+
   </head>
 
   <body id="page-top">
@@ -55,7 +57,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto" src="img/favicon.png" alt="">
         <h1 class="text-uppercase mb-0">Daniel Kim</h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Machine Learning - Software Engineering - Security<br></h2>
@@ -226,10 +228,17 @@
               <hr class="star-dark mb-5">
               <img class="portfolio-img-fluid mb-5" src="img/portfolio/personal-project.png" alt="">
               <p class="mb-5">I have a strong passion for coding and I often find myself interested in some projects and dive into them in my quest to gain understanding in a new field, but to also keep up with the constantly evolving world of technology. Thank you for checking these out!</p>
-              <h4 class="text-secondary mb-0">Portfolio Website</h4>
+              <h4 class="text-secondary mb-2">Portfolio Website</h4>
+              <p class="mb-2"><img src="./img/favicon.png" style="max-width:20%;"/></p>
               <p class="mb-0"><strong>Tools</strong>: Bootstrap, Node.js, Digital Ocean, Github, Certbot</p>
               <p class="mb-0"><strong>Concepts</strong>: Web Design, Backend Development, SSL, Security, Ajax, Jquery</p>
-              <p class="mb-0"<strong>Languages</strong>: HTML, Javascript, CSS, PHP</p>
+              <p class="mb-0"><strong>Languages</strong>: HTML, Javascript, CSS, PHP</p>
+              <p class="mb-5"><a href="https://www.github.com/PenguinDan/Website" target="_blank">Github</a></p>
+              <h4 class="text-secondary mb-2">Kaggle Ship Competition</h4>
+              <p class="mb-0"><strong>Tools</strong>: Kaggle API, Keras, Tensorflow, Google Cloud</p>
+              <p class="mb-0"><strong>Concepts</strong>: Data Analysis, Deep Learning, Machine Learning</p>
+              <p class="mb-0"><strong>Languages</strong>: Python</p>
+              <p class="mb-5"><a href="https://www.github.com/PenguinDan/AirBusKaggle" target="_blank">Github</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close">Close</i>
               </a>
@@ -252,8 +261,8 @@
               <hr class="star-dark mb-5">
               <img class="portfolio-img-fluid mb-5" src="img/portfolio/academic-project.png" alt="">
               <p class="mb-5">These projects showcase my skillset and knowledge in a variety of fields and applications from security, application development, and database management. I have experience in a variety of languages, but the ones I am most comfortable with are Python, Java, C#, and Javascript.</p>
-              <h4 class="text-secondary mb-0">Senior Project: Red Pony-Astral Framework and Phylo</h4>
-              <p class="mb-0"><img src="img/astral.png" style="max-width:30%;"/><img src="img/phylo.png"></p>
+              <h4 class="text-secondary mb-3">Senior Project: Red Pony-Astral Framework and Phylo</h4>
+              <p class="mb-3"><img src="img/astral.png" style="max-width:30%;"/><img src="img/phylo.png"></p>
               <p class="mb-0"><strong>Tools</strong>: Node.js, Mongo, Android Studio, AWS, Linux, Github, Trello, Slack</p>
               <p class="mb-0"><strong>Concepts</strong>: Backend Development, REST, API Design, Security, NoSQL, Application Development, AWS Environment, Version Control, Project Management, UI Design, Web Design</p>
               <p class="mb-0"><strong>Languages</strong>: Javascript, Java, Python, Bash, HTML, NoSQL, XML, CSS, Gradle</p>
@@ -261,27 +270,27 @@
               <p class="mb-0"><a href="https://www.github.com/Doliveraa/RedPony" target="_blank">Red Pony Github</a></p>
               <p class="mb-0"><a href="https://www.github.com/jaredraycoleman/astralframework" target="_blank">Astral Framework Github<a></p>
               <p class="mb-5"><a href="https://www.github.com/jaredraycoleman/phylo" target="_blank">Phylo Github</a></p>
-              <h4 class="text-secondary mb-0">Security: Ransomware</h4>
+              <h4 class="text-secondary mb-3">Security: Ransomware</h4>
               <p class="mb-0"><strong>Tools</strong>: Python Cryptography Hazmat API, Node.js, Mongo, Linux, Github, Google Cloud</p>
               <p class="mb-0"><strong>Concepts</strong>: RSA, AES-CBC, SSL, HMAC, Security, Backend Development, Database Management, Authentication, NoSQL, Google Cloud Environment, Version Control</p>
               <p class="mb-0"><strong>Languages</strong>: Python, Javascript, NoSQL</p>
               <p class="mb-0"><strong>Goal</strong>: Design a cryptographically strong Ransomware application that communicates with a Node.js server to store a cryptographically strong Private Key generated by the Python Hazmat RSA API. For a full list of features for the encryption and decryption methods, please see my Ransomware Encryption link. For the full list of methods encorporated by my server, please see my Ransomware Node.js github.</p>
               <p class="mb-0"><a href="https://github.com/DanDan-AdamFlores/Ransomware/tree/master/Encryption" target="_blank">Ransomeware: Encryption Github</a></p>
               <p class="mb-5"><a href="https://github.com/DanDan-AdamFlores/Ransomware/tree/master/Node_Server" target="_blank">Ransomware: Node.js Server Github</a></p>
-              <h4 class="text-secondary mb-0">Android Application: Memories</h4>
-              <p class="mb-0"><img src="img/memories.png" style="max-width:20%;"/></p>
+              <h4 class="text-secondary mb-3">Android Application: Memories</h4>
+              <p class="mb-3"><img src="img/memories.png" style="max-width:20%;"/></p>
               <p class="mb-0"><strong>Tools</strong>: Android Studio, Maven, Github, Firebase, Firestore, Google API</p>
               <p class="mb-0"><strong>Concepts</strong>: Database Management, Application Development, Data Streaming, UI-Design</p>
               <p class="mb-0"><strong>Languages</strong>: Java, XML, NoSQL</p>
               <p class="mb-0"><strong>Goal</strong>: Memories is a Location based social media application where the focus is not on the user's but the events or "Memories" that the user and the people around them are experiencing.</p>
-              <p class="mb-5"><a href="https://www.github.com/penguindan/MemoriesApp">Github</a></p>
-              <h4 class="text-secondary mb-0">Autoshop Database Design Project</h4>
+              <p class="mb-5"><a href="https://www.github.com/penguindan/MemoriesApplication" target="_blank">Github</a></p>
+              <h4 class="text-secondary mb-3">Autoshop Database Design Project</h4>
               <p class="mb-0"><strong>Tools</strong>: MySQL</p>
               <p class="mb-0"><strong>Concepts</strong>: Database Design</p>
               <p class="mb-0"><strong>Languages</strong>: Java, SQL</p>
               <p class="mb-0"><strong>Goal</strong>: Design a proof of concept database for an auto-shop. The project utilizes over 30 tables, more than 50 business rules, and approximately 1000 insert statements, views, triggers, and complex query statements and their corresponding outputs.</p>
               <p class="mb-5"><a href="https://www.github.com/PenguinDan/AutoshopDatabaseProject" target="_blank">Github</a></p>
-              <h4 class="text-secondary mb-0">Honors (Insane) Algorithms Projects</h4>
+              <h4 class="text-secondary mb-3">Honors (Insane) Algorithms Projects</h4>
               <p class="mb-0"><strong>Tools</strong>: Java</p>
               <p class="mb-0"><strong>Concepts</strong>: Dynamic Programming, Network Flow, Linear Programming, FFT, Recursion, Graphs, Simplex</p>
               <p class="mb-0"><strong>Languages</strong>: Java, C++</p>
@@ -316,12 +325,12 @@
               <p>Dr.Mohammad Mozumdar: mohammad.mozumdar@csulb.edu</p>
               <p>Dr.Wenlu Zhang: wenlu.zhang@csulb.edu</p>
               <p class="mb-5">MIIPS Website: <a href="https://csulb-ml.github.io" target="_blank">https://csulb-ml.github.io/</a></p>
-              <h4 class="text-secondary mb-0">MIL-STD-1553 Intrusion Detection</h4>
+              <h4 class="text-secondary mb-3">MIL-STD-1553 Intrusion Detection</h4>
               <p class="mb-0">Abstract</p>
               <p class="mb-0">The goal for this project was to introduce an efficient method for detecting anomalies within the streaming data logs of an MIL-STD-1553 multiplex data bus system. Our current approach focuses on the incoming command words and the patterns in which they create to define a model creation pipeline comprising of training, testing, and exporting phases. Once exported, the project can be used to remotely or locally read data for real time data analysis and anomaly detection. I was able to achieve an accuracy rate of 99.6% on the test data using our aforementioned pipeline methods.</p>
               <a href="https://www.github.com/penguindan/mil" target="_blank">Github<br></a>
               <p class="mb-5"><a href="/research-paper/mil-std-1553.pdf" download>Download Research Paper</a></p>
-              <h4 class="text-secondary mb-0">Object Detection and Classification of Ships in Satellite Images</h4>
+              <h4 class="text-secondary mb-3">Object Detection and Classification of Ships in Satellite Images</h4>
               <p class="mb-0">Abstract</p>
               <p class="mb-0">The goal for this project was to correctly detect and classify ships in large satellite images using a Convolutional Neural Network (CNN) that was trained on 80 by 80 images of ship and non-ship data in conjunction with a custom object detection algorithm.  Our approach is able to efficiently and accurately detect ships in satellite images of varying size ratios. In comparison to an approach found on Kaggle.com that uses a sliding window across the entire image to detect the ships within 15 minutes, our project pipeline is able to detect and output bounding boxes in under 5 seconds.</p>
               <a href="https://www.github.com/penguindan/DeepLearningShipDetection" target="_blank">Github<br></a>
