--- a/views/index.pug
+++ b/views/index.pug
@@ -60,7 +60,7 @@
         <img class="img-fluid mb-5 d-block mx-auto" src="img/favicon.png" alt="">
         <h1 class="text-uppercase mb-0">Daniel Kim</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Machine Learning - Software Engineering - Security<br></h2>
+        <h2 class="font-weight-light mb-0">Machine Learning - Software Engineering - Security</h2>
         <h3 class="mb-0">DanielKimStudent@Hotmail.com</h3>
       </div>
     </header>
